--- a/gb/24/6/21/n14274665.md
+++ b/gb/24/6/21/n14274665.md
@@ -7,9 +7,9 @@
 </h6>
 <hr>
 <p>【大纪元2024年06月21日讯】（大纪元记者宋顺澈台湾台北报导）台电台北南区营业处在21日举办2场电价调整说明会，邀请制造业用电大户参与，会中解说2024年4月新上线的电价，也介绍批次生产时间电价及能源署动力与公用设备补助作业。北南区处为提供精致客制化服务，每位用户都有一对一的桌边专人服务，由主管级的专人解答用户各种问题。</p>
-<figure id="14274667" aria-describedby="caption-14274667" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14274667-690192-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14274667-690192-450x253.jpg" alt="主管级的服务专员解说2024年4月实施的电价调整内容。" width="500" /></a><figcaption id="caption-14274667" class="wp-caption-text">主管级的服务专员解说2024年4月实施的电价调整内容。（北南区处提供）</figcaption></figure>
+<figure id="14274667" aria-describedby="caption-14274667" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14274667-690192-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14274667-690192-450x253.jpg" alt="主管级的服务专员解说2024年4月实施的电价调整内容。" width="500" /></a><figcaption id="caption-14274667" class="wp-caption-text">主管级的服务专员解说2024年4月实施的电价调整内容。（北南区处提供）</figcaption></figure>
 <p>北南区处提供每位用户用电历史负载曲线图及客制化的电费试算资料，让用户能够选用适合自身的电价方案；并根据不同用户的特性给予调整用电模式的建议，例如将空压机、射出成型机等高耗能设备，避开尖峰时段改在电费单价低的时段启动，透过重新安排生产流程、上班时间，尽管整体用电量不变，电费账单却能得到魔术般的瘦身效果。</p>
-<figure id="14274666" aria-describedby="caption-14274666" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14274666-690191-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2024/06/id14274666-690191-450x253.jpg" alt="杨显辉处长提到台电近年致力发展再生能源，除了让台湾成为永续国家外，也能协助本土企业与世界接轨。" width="500" /></a><figcaption id="caption-14274666" class="wp-caption-text">杨显辉处长提到台电近年致力发展再生能源，除了让台湾成为永续国家外，也能协助本土企业与世界接轨。（北南区处提供）</figcaption></figure>
+<figure id="14274666" aria-describedby="caption-14274666" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14274666-690191-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2024/06/id14274666-690191-450x253.jpg" alt="杨显辉处长提到台电近年致力发展再生能源，除了让台湾成为永续国家外，也能协助本土企业与世界接轨。" width="500" /></a><figcaption id="caption-14274666" class="wp-caption-text">杨显辉处长提到台电近年致力发展再生能源，除了让台湾成为永续国家外，也能协助本土企业与世界接轨。（北南区处提供）</figcaption></figure>
 <p>北南区处杨显辉处长说，环保、永续已由趋势逐渐转变为义务与责任，台湾为出口导向国家，发展再生能源是与世界接轨必须采取的策略。像是Apple、Dell及BMW等国际企业均要求其合作供应商，营运用的电力需有一定比例使用绿电。而随着太阳光电发电占比逐年提升，电力系统净负载的尖峰时段也从过去的白天移往夜间，北南区处自2023年新时间带实施起，即动员全体人力推广新观念，期望达成协助用户降低电费支出同时，也减轻电力系统负担的双赢成果。◇</p>
 <p>责任编辑：昌英</p>
 <strong>相关新闻：</strong>
@@ -19,35 +19,35 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266143.md#1">黄仁勋指台湾电力是挑战 经长：没必要担心</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/9/n14267134.md#1">缓解供应链减碳压力 台电拟分3类价格电力</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269567.md#1">分享节电秘笈 与集团企业用户共创双赢</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268428.md#1">三莺旅宿业能量不足 夜市恐面临消失危机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263715.md#1">台电助爱智更换节能灯具 认购爱心礼盒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14261994.md#1">浪漫初夏幸福指南 在台电北南遇见幸福</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14259295.md#1">盖淡煤矿坑景观新亮点 百年遗址闪耀如昔</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307339.md#1">新北三重教保员体罚5幼生重罚60万元 园方勒令停招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306418.md#1">挽袖捐热血 台电员工用爱为生命接力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305865.md#1">环状线复原工程 侯友宜：力拼今年底完工</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303509.md#1">恋恋山佳 怀念老歌演唱会夏日星光场开唱</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/23/n9986897.md#1" target="_blank">莫斯科“悲伤墙”背后的故事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/31/n11489359.md#1" target="_blank">法轮功洪传欧洲 多族裔民众：找到生命意义</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/22/n11470069.md#1" target="_blank">共产暴政录：西藏问题</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/8/10/n3655834.md#1" target="_blank">王华：闲谈西方的签名与东方的手印</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272135.md#1">长大的女孩：法度加入神韵的故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14269975.md#1">【未解之谜】揭秘1996年巴西UFO坠毁事件（下）医院惊魂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14272001.md#1">【未解之谜】细思极恐 AI接管人类倒计时？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268258.md#1">【古道人生】地师为富家卜穴 为何最终给了佃户之子？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267444.md#1">德不配位必有危 宝马也需有德人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274428.md#1">【时事金扫描】普京访朝不爽？俄官员被驱赶</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273494.md#1">【菁英论坛】缺钱缺疯了 中共向民企开刀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273712.md#1">【菁英论坛】经济危机又来？巴菲特的警示</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273536.md#1">人民币兑俄卢布跌至1年多来最低 释何信号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273221.md#1">中国5月经济数据不乐观 专家：已是僵尸经济</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273366.md#1">迎接夏至 6月21日将现“草莓月亮”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273702.md#1">演唱会被投诉唱粤语歌 张学友：我来自香港</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273664.md#1">冷脸面对中共央视直播 女星周也被指踢到钢板</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272917.md#1">陆第一网红冯提莫癌症痊愈 自曝还有5种病</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272676.md#1">克里斯伊凡：漫威片场像大工厂 小电影更有价值</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272857.md#1">黄晓明为戏一度增肥15公斤 感叹体重难恢复</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272483.md#1">日本作家谈文化差异 一个地名让台湾人笑翻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273234.md#1">人死时大脑会发生什么事？ 医生这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14271007.md#1">桑叶茶是长寿茶 清肺祛肝火 3类人不宜多喝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273984.md#1">如果你经常凌晨1点以后才睡觉 看看这个</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/13/n14269682.md#1">这些食物不宜隔天再次加热食用</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302522.md#1">【古道人生】相士说他是石崇再世 致富之机全在意想之外！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307896.md#1">肩颈痛别360度转！1穴位2动作 肩颈放轻松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309864.md#1">【漂流传奇】荣耀背后的影坛传奇许鞍华</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309979.md#1">【秦鹏观察】乌军攻入俄罗斯 中俄朝各打小算盘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308743.md#1">用特斯拉皮卡种地走红 美农场主：真的很快</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308673.md#1">【更新】2024年巴黎奥运奖牌榜 8月10日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308823.md#1">17岁美华裔女生开副业 月进7.1万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308866.md#1">刻画外卖骑手生活 徐峥《逆行人生》评论两极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308912.md#1">罗时丰切割下架YT影片 “侄子”获店家力挺打气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309654.md#1">如何从指甲看出身体是否健康？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">到星巴克怎么点？TOP7健康饮品及点餐5技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308183.md#1">木瓜促消化、护眼 这些美味吃法为健康加分</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/21/n14274665.htm">电价怎么调 台电北南区处报你知</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274665.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
